--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="index.html#Impressum"> Impressum  </a> 
     </header>
 
-    <H1 id="Haupt_Ueberschrift">Heart-Chor München – A-cappella Pop</H1>
+    <H1 id="Haupt_Ueberschrift">Christofs mental world</H1>
 
     <a href="assets/img/Chor03.png">
         <img src = "assets/img/Abstrakt.jpg" alt = "Chor als Gemälde" > 
