--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             &raquo;Danke der Nachfrage, zum Glück alles in Ordnung&laquo;
             sagt der Mann. <br>
             Der Versicherungsangestellte bittet um einen Augenblick und geht zu seinem Chef. 
-            Der Chef wittert die Chance, den Fall als Marketing-Idee zu verwenden. Er geht selbst zu dem Kunden und sagt: <br>
+            Der wittert die Chance, den Fall als Marketing-Idee zu verwenden. Er geht selbst zu dem Kunden und sagt: <br>
             &raquo;Selbstverständlich können Sie bei uns eine Lebensversicherung abschließen. 
             Kommen Sie doch einfach morgen wieder, wir bereiten so lange alle Unterlagen für Sie vor.&laquo; <br>
             Der Mann lehnt bedauernd und sagt:
