--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             &raquo;Danke der Nachfrage, zum Glück alles in Ordnung&laquo;
             sagt der Mann. <br>
             Der Versicherungsangestellte bittet um einen Augenblick und geht zu seinem Chef. 
-            Der wittert die Chance, den Fall als Marketing-Idee zu verwenden. Er geht selbst zu dem Kunden und sagt: <br>
+            Dieser wittert die Chance, den Fall für das Marketing zu verwerten. Er geht selbst zu dem Kunden und sagt: <br>
             &raquo;Selbstverständlich können Sie bei uns eine Lebensversicherung abschließen. 
             Kommen Sie doch einfach morgen wieder, wir bereiten so lange alle Unterlagen für Sie vor.&laquo; <br>
             Der Mann lehnt bedauernd und sagt:
@@ -68,11 +68,11 @@
             &raquo;Was für einen wichtigen Termin haben Sie denn da?&laquo; wundert sich der Chef.<br>
             &raquo;Da heiratet mein Großvater&laquo; <br>
             &raquo;Und wie alt ist Ihr Großvater?&laquo; <br>
-            &raquo;Letzte Woche hat er seinen 150. Geburtstag gefeuert.&laquo; <br>
+            &raquo;Letzte Woche hat er seinen 150. Geburtstag gefeiert.&laquo; <br>
             &raquo;Er ist 150 Jahre alt und möchte in diesem Alter noch heiraten?&laquo; <br>
             &raquo;Na ja&laquo; meint der Mann, &raquo;ich fürchte eigentlich will er gar nicht heiraten, aber seine konservativen Eltern üben einen ziemlichen Druck auf ihn aus.&laquo;
             <br><br>
-            So ähnlich habe ich die Geschichte kürzlich in einem Interview mit dem Alternsforscher <i> Nir Barzilai </i> gehört
+            So, oder so ähnlich habe ich diese Geschichte kürzlich von dem Alternsforscher <i> Nir Barzilai </i> in einem Interview gehört.
             </p>
 
             
