--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" href="assets/CSS/main.css"> 
 
     <!-- Meta-Description (wird oft als Snippet in Google angezeigt) -->
-    <meta name="description" content="Der Heart-Chor München singt A-cappella Pop & Rock mit Herz und Begeisterung. Komm zu unseren Auftritten oder sing mit bei uns!">
+    <meta name="description" content="Was mir einfällt">
   
     <!-- Bestätigung der Inhaberschaft - to do -->
     <meta name="" content="" />
