--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <h4>Urheberrecht</h4>
         <p>
             Alle auf dieser Website veröffentlichten Inhalte (Texte, Bilder, Grafiken, Layout) unterliegen dem Urheberrecht. 
-            Eine Vervielfältigung oder Verwendung ist nur mit ausdrücklicher Genehmigung der Chorleitung bzw. des Chores gestattet.
+            Eine Vervielfältigung oder Verwendung ist nur mit ausdrücklicher Genehmigung gestattet.
         </p>
 
         <h4>Haftung für Links</h4>
