--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Dieser wittert die Chance, den Fall für das Marketing zu verwerten. Er kommt persönlich zu dem Kunden und sagt: <br>
             &raquo;Selbstverständlich können Sie bei uns eine Lebensversicherung abschließen. 
             Kommen Sie doch einfach morgen wieder, wir bereiten so lange alle Unterlagen für Sie vor.&laquo; <br>
-            Der Mann lehnt bedauernd und sagt:
+            Der Mann lehnt bedauernd ab und sagt:
             &raquo;Morgen geht's nicht, da habe ich einen wichtigen Termin.&laquo; <br>
             &raquo;Was für einen wichtigen Termin haben Sie denn da?&laquo; wundert sich der Chef.<br>
             &raquo;Da heiratet mein Großvater&laquo; <br>
