--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             &raquo;Und wie alt ist Ihr Großvater?&laquo; <br>
             &raquo;Letzte Woche hat er seinen 150. Geburtstag gefeiert.&laquo; <br>
             &raquo;Er ist 150 Jahre alt und möchte in diesem Alter noch heiraten?&laquo; <br>
-            &raquo;Na ja&laquo; meint der Mann, &raquo;ich fürchte eigentlich will er gar nicht heiraten, aber seine konservativen Eltern üben einen ziemlichen Druck auf ihn aus.&laquo;
+            &raquo;Na ja&laquo; meint der Mann, &raquo;ich fürchte er will gar nicht heiraten, aber seine Eltern üben einen ziemlichen Druck auf ihn aus.&laquo;
             <br><br>
             So, oder so ähnlich habe ich diese Geschichte kürzlich von dem Alternsforscher <i> Nir Barzilai </i> in einem Interview gehört.
             </p>
