--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <a href="index.html#Langes_Leben"> Langes Leben  </a> 
         <a href="index.html#Fanpost"> Fanpost  </a>
         <a href="index.html#Impressum"> Impressum  </a> 
-    </header>
+
+    </header>  <!--  ==================================================================== -->
+
 
     <H1 id="Haupt_Ueberschrift"> Christofs Mental World</H1>
 
@@ -75,7 +77,13 @@
             So, oder so ähnlich habe ich diese Geschichte kürzlich von dem Alternsforscher <i> Nir Barzilai </i> in einem Interview gehört.
             </p>
 
-            
+            <H2 id="Label"> Formale Logik</H2>
+            <p>
+            Je mehr Käse, desto mehr Löcher. <br>
+            Je mehr Löcher, desto weniger Käse. <br>
+            Daraus folgt: Je mehr Käse, desto weniger Käse.<br>
+            Logisch - oder?
+            </p>
 
             <H2 id="Fanpost"> Fanpost</H2>
             <p> 
@@ -108,7 +116,6 @@
         <p>
             Kontakt:<br>
             E-Mail: <a href="ChristofBodendorf@web.de"> ChristofBodendorf@web.de</a><br>
-            <!-- Telefon: 01234 / 56789 -->
         </p>
 
         <p>
@@ -120,7 +127,7 @@
 
         <h4> Haftungsausschluss </h4>
         <p>
-            Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.
+            Die Inhalte meiner Seiten wurden mit Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte kann ich jedoch keine Gewähr übernehmen.
         </p>
 
         <h4>Urheberrecht</h4>
@@ -131,7 +138,8 @@
 
         <h4>Haftung für Links</h4>
         <p>
-            Unsere Website enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
+            Meine Webseite enthält Links zu externen Websites Dritter, auf deren Inhalte ich  keinen Einfluss habe. Deshalb kann ich für diese fremden Inhalte keine Gewähr übernehmen.
+            Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
         </p>
     
     </div>
