--- a/index.html
+++ b/index.html
@@ -100,7 +100,26 @@
             So, oder so ähnlich habe ich diese Geschichte kürzlich von dem Alternsforscher <i> Nir Barzilai </i> in einem Interview gehört.
             </p>
 
-        
+        <H2> Schutzengel </H2>
+            <p>
+            Nach vielen gemeinsamen Jahren hatte mich überraschend mein Schutzengel verlassen. 
+            Das war an jenem Tag, als ein Kind einen Schneeball warf, der versehentlich einen Blumentopf traf, welcher sodann aus der Balance geratend vom Balkon herabstürzte. 
+            Die Flugbahn war auf Kollisionskurs - natürlich mit mir;  um eine Haaresbreite hätte es mich erwischt. 
+            <br>
+            Ich blickte nervös von dem zerborstenen Topf vor meinen Füßen in die Höhe - jeder Dachziegel schien es plötzlich auf mich abgesehen zu haben. 
+            Ich war schutzlos, verwundbar einer gefährlichen, verletzenden Welt ausgeliefert. 
+            Erstaunlich oft, so erschien es mir jetzt, war es gut gegangen, erstaunlich oft war ich heil geblieben.
+            Aber nun bin ich vogelfrei. So, ganz ohne Schutzengel kann man auf Dauer nicht überleben. 
+            <br>
+            Vielleicht habt Ihr ja meinen kleinen Engel gesehen. Dann richtet ihm doch von mir aus: Ich hab' nachgedacht, geputzt, gestrichen und aufgräumt - in mir. 
+            Ich werd' aufpassen und vorsichtig sein. Du wirst Dich wieder wohl fühlen, hier bei mir. Bitte komm bald zurück.
+            <br><br>
+            Frei nach Ludwig Hirsch 'Schutzengerl'
+
+
+            
+            </p>
+
             <H2 id="Label01"> Formale Logik</H2>
             <p>
             Je mehr Käse, desto mehr Löcher. <br>
