--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </p>
     
     
-        <H2 id="label01">Und was ist eine 'mentalen Welt'?</H2>
+        <H2 id="label01">Und was ist eine 'mentale Welt'?</H2>
             <p></p>
             <blockquote>
             Leicht beieinander wohnen die Gedanken,<br>
